--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,18 @@ server.context_parameters.InitialisationAnnouncementTimeout=5
 
 
 server.session.timeout=600
+server.tomcat.max-threads=3000
 
 
 yawl.engineid=0
-bootstrap.servers=192.168.239.128:9092
+zk.address=222.200.180.59:2181
+engine.address=192.168.239.1:8089
+
+bootstrap.servers=222.200.180.59:9092
+spring.metrics.export.delay-millis=1000 
+spring.metrics.export.send-latest=true
+
+
+influxdb.server.address=222.200.180.59:8086
+influxdb.db.name=metrics
+
