--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,22 @@ yawl.engineid=0
 zk.address=222.200.180.59:2181
 engine.address=192.168.239.1:8089
 
-bootstrap.servers=222.200.180.59:9092
+bootstrap.servers=192.168.239.128:9092
 spring.metrics.export.delay-millis=1000 
 spring.metrics.export.send-latest=true
 
 
-influxdb.server.address=222.200.180.59:8086
+influxdb.server.address=192.168.239.128:8086
 influxdb.db.name=metrics
+
+endpoints.jmx.enabled=true
+management.port=8081
+
+
+jmx.rmi.host:localhost
+jmx.rmi.port:1099
+
+
+
+
 
