--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -4,4 +4,4 @@ VOLUME /tmp
 ADD originalyawlengine-1.0-SNAPSHOT.jar app.jar
 ADD yawldb.h2.db /tmp/yawldb.h2.db
 RUN sh -c 'touch /app.jar'
-ENTRYPOINT java -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+ENTRYPOINT java -Xms2g -Xmx2g -Djava.security.egd=file:/dev/./urandom -jar /app.jar
